Code reformatting, Time class improvements, added intensity field & uniform to lighting, improved the test game, WIP fullscreen toggling?

--- a/SurvivalGame/SurvivalGame.csproj
+++ b/SurvivalGame/SurvivalGame.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Assets\Main.cs" />
     <Compile Include="Assets\Netplay.cs" />
     <Compile Include="Assets\SoundInstance.cs" />
+    <Compile Include="Assets\World\AtmosphereSystem.cs" />
     <Compile Include="Assets\World\Chunk.cs" />
     <Compile Include="Assets\World\Tile.cs" />
     <Compile Include="Assets\World\Tiles\Dirt.cs" />
