--- a/.gitignore
+++ b/.gitignore
@@ -1,104 +1,6 @@
-Engine/obj/Debug/Engine.csproj.CopyComplete
-Engine/obj/Debug/Engine.csproj.FileListAbsolute.txt
-Engine/obj/Debug/GameEngine.Properties.Resources.resources
-Engine/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
-Engine/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
-Engine/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
-Engine/obj/x64/Debug/Engine.csproj.CopyComplete
-Engine/obj/x64/Debug/Engine.csproj.FileListAbsolute.txt
-Engine/obj/x64/Debug/GameEngine.Properties.Resources.resources
-Engine/obj/x64/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
-Engine/obj/x64/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
-Engine/obj/x64/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
-Engine/obj/x64/Release/Engine.csproj.CopyComplete
-Engine/obj/x64/Release/Engine.csproj.FileListAbsolute.txt
-Engine/obj/x64/Release/GameEngine.Properties.Resources.resources
-Engine/obj/x64/Release/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
-Engine/obj/x64/Release/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
-Engine/obj/x64/Release/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
-Engine/bin/Debug/BulletSharp.dll.config
-Engine/bin/Debug/libbulletc-linux-x64.so
-Engine/bin/Debug/libbulletc-linux-x86.so
-Engine/bin/Debug/Newtonsoft.Json.xml
-Engine/bin/Debug/NVorbis.xml
-Engine/bin/Debug/OpenTK.xml
-Engine/bin/Debug/System.ValueTuple.xml
-Engine/bin/x64/Debug/BulletSharp.dll.config
-Engine/bin/x64/Debug/libbulletc-linux-x64.so
-Engine/bin/x64/Debug/libbulletc-linux-x86.so
-Engine/bin/x64/Debug/Newtonsoft.Json.xml
-Engine/bin/x64/Debug/NVorbis.xml
-Engine/bin/x64/Debug/OpenTK.xml
-Engine/bin/x64/Debug/System.ValueTuple.xml
-Engine/bin/x64/Release/Newtonsoft.Json.xml
-Engine/bin/x64/Release/NVorbis.xml
-Engine/bin/x64/Release/OpenTK.xml
-Engine/bin/x64/Release/System.ValueTuple.xml
-.vs/GameEngineGL/v15/Server/sqlite3/db.lock
-.vs/GameEngineGL/v15/Server/sqlite3/storage.ide
-.vs/GameEngineGL/v15/Server/sqlite3/storage.ide-shm
-.vs/GameEngineGL/v15/Server/sqlite3/storage.ide-wal
-Game2DTest/bin/Debug/BulletSharp.dll.config
-Game2DTest/bin/Debug/Game.exe.config
-Game2DTest/bin/Debug/Newtonsoft.Json.xml
-Game2DTest/bin/Debug/NVorbis.xml
-Game2DTest/bin/Debug/OpenTK.xml
-Game2DTest/bin/Debug/System.ValueTuple.xml
-Game2DTest/obj/Debug/Game2DTest.csproj.CopyComplete
-Game2DTest/obj/Debug/Game2DTest.csproj.FileListAbsolute.txt
-Game2DTest/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
-Game2DTest/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
-Game2DTest/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
-Game2DTest/obj/Release/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
-Game2DTest/obj/Release/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
-Game2DTest/obj/Release/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
-MeshLibrary/bin/Debug/System.ValueTuple.xml
-MeshLibrary/bin/Release/System.ValueTuple.xml
-MeshLibrary/obj/Debug/SMeshLibrary.csproj.CopyComplete
-MeshLibrary/obj/Debug/SMeshLibrary.csproj.FileListAbsolute.txt
-MeshLibrary/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
-MeshLibrary/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
-MeshLibrary/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
-MeshLibrary/obj/Release/SMeshLibrary.csproj.CopyComplete
-MeshLibrary/obj/Release/SMeshLibrary.csproj.FileListAbsolute.txt
-MeshLibrary/obj/Release/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
-MeshLibrary/obj/Release/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
-MeshLibrary/obj/Release/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
-SurvivalGame/bin/Debug/BulletSharp.dll.config
-SurvivalGame/bin/Debug/Game.exe.config
-SurvivalGame/bin/Debug/Newtonsoft.Json.xml
-SurvivalGame/bin/Debug/NVorbis.xml
-SurvivalGame/bin/Debug/OpenTK.xml
-SurvivalGame/bin/Debug/System.ValueTuple.xml
-SurvivalGame/bin/x64/Debug/BulletSharp.dll.config
-SurvivalGame/bin/x64/Debug/Newtonsoft.Json.xml
-SurvivalGame/bin/x64/Debug/NVorbis.xml
-SurvivalGame/bin/x64/Debug/OpenTK.xml
-SurvivalGame/bin/x64/Debug/System.ValueTuple.xml
-SurvivalGame/bin/x64/Release/Newtonsoft.Json.xml
-SurvivalGame/bin/x64/Release/NVorbis.xml
-SurvivalGame/bin/x64/Release/OpenTK.xml
-SurvivalGame/bin/x64/Release/System.ValueTuple.xml
-SurvivalGame/obj/Debug/SurvivalGame.csproj.CopyComplete
-SurvivalGame/obj/Debug/SurvivalGame.csproj.FileListAbsolute.txt
-SurvivalGame/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
-SurvivalGame/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
-SurvivalGame/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
-SurvivalGame/obj/x64/Debug/SurvivalGame.csproj.CopyComplete
-SurvivalGame/obj/x64/Debug/SurvivalGame.csproj.FileListAbsolute.txt
-SurvivalGame/obj/x64/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
-SurvivalGame/obj/x64/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
-SurvivalGame/obj/x64/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
-SurvivalGame/obj/x64/Release/SurvivalGame.csproj.CopyComplete
-SurvivalGame/obj/x64/Release/SurvivalGame.csproj.FileListAbsolute.txt
-SurvivalGame/obj/x64/Release/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
-SurvivalGame/obj/x64/Release/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
-SurvivalGame/obj/x64/Release/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
-SurvivalGame/obj/
+*/obj/*
+*/bin/*
+*.vs/
 packages/
-MeshLibrary/bin/
-MeshLibrary/obj/
-Game2DTest/bin/
-Game2DTest/obj/
-Engine/bin/
-Engine/obj/
+SurvivalGame/Assets/bin
+SurvivalGame/Assets/obj
