Heavy survival test improvements: Added CameraController, improved hierarchy, also players can now turn into trees.

--- a/SurvivalGame/SurvivalGame.csproj
+++ b/SurvivalGame/SurvivalGame.csproj
@@ -41,25 +41,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Entities\Entity.cs" />
-    <Compile Include="Assets\Entities\Items\Item.cs" />
-    <Compile Include="Assets\Entities\Items\Tools\StoneHatchet\StoneHatchet.cs" />
-    <Compile Include="Assets\Entities\Mobs\Human\Human.cs" />
-    <Compile Include="Assets\Entities\Mobs\Mob.cs" />
-    <Compile Include="Assets\Entities\Static\Nature\Minerals\Boulder.cs" />
-    <Compile Include="Assets\Entities\Static\Nature\Plants\BerryBush.cs" />
-    <Compile Include="Assets\Entities\Static\Nature\Trees\Spruce\Spruce.cs" />
-    <Compile Include="Assets\Entities\Static\Nature\Trees\Tree.cs" />
-    <Compile Include="Assets\Entities\Static\StaticEntity.cs" />
-    <Compile Include="Assets\Entities\Static\Structures\Campfire\Campfire.cs" />
-    <Compile Include="Assets\Entities\Testing\Robot\Robot.cs" />
-    <Compile Include="Assets\Entities\Testing\Rocket\Rocket.cs" />
-    <Compile Include="Assets\Entities\Testing\Skybox.cs" />
-    <Compile Include="Assets\Entities\Testing\Sun.cs" />
-    <Compile Include="Assets\Entities\Testing\TestSphere\TestSphere.cs" />
-    <Compile Include="Assets\Entities\Testing\TestCube\CubeObj.cs" />
-    <Compile Include="Assets\Entities\Testing\TestCube\MovingCube.cs" />
-    <Compile Include="Assets\Entities\Testing\TestCube\TexTest.cs" />
+    <Compile Include="Assets\Objects\Brains\Brain.cs" />
+    <Compile Include="Assets\Objects\Brains\BrainInput.cs" />
+    <Compile Include="Assets\Objects\CameraControllers\FirstPersonCamera.cs" />
+    <Compile Include="Assets\Objects\CameraControllers\BasicThirdPersonCamera.cs" />
+    <Compile Include="Assets\Objects\Entities\Entity.cs" />
+    <Compile Include="Assets\Objects\Entities\Items\Item.cs" />
+    <Compile Include="Assets\Objects\Entities\Items\Tools\StoneHatchet\StoneHatchet.cs" />
+    <Compile Include="Assets\Objects\Entities\Mobs\Human\Human.cs" />
+    <Compile Include="Assets\Objects\Entities\Mobs\Mob.cs" />
+    <Compile Include="Assets\Objects\Entities\Static\Nature\Minerals\Boulder.cs" />
+    <Compile Include="Assets\Objects\Entities\Static\Nature\Plants\BerryBush.cs" />
+    <Compile Include="Assets\Objects\Entities\Static\Nature\Trees\Spruce\Spruce.cs" />
+    <Compile Include="Assets\Objects\Entities\Static\Nature\Trees\Tree.cs" />
+    <Compile Include="Assets\Objects\Entities\Static\StaticEntity.cs" />
+    <Compile Include="Assets\Objects\Entities\Static\Structures\Campfire\Campfire.cs" />
+    <Compile Include="Assets\Objects\Entities\Testing\Robot\Robot.cs" />
+    <Compile Include="Assets\Objects\Entities\Testing\Rocket\Rocket.cs" />
+    <Compile Include="Assets\Objects\Entities\Testing\Skybox.cs" />
+    <Compile Include="Assets\Objects\Entities\Testing\Sun.cs" />
+    <Compile Include="Assets\Objects\Entities\Testing\TestCube\RaisingPlatform.cs" />
+    <Compile Include="Assets\Objects\Entities\Testing\TestSphere\TestSphere.cs" />
+    <Compile Include="Assets\Objects\Entities\Testing\TestCube\CubeObj.cs" />
+    <Compile Include="Assets\Objects\Entities\Testing\TestCube\MovingCube.cs" />
+    <Compile Include="Assets\Objects\Entities\Testing\TestCube\TexTest.cs" />
     <Compile Include="Assets\Interaction\IFootstepProvider.cs" />
     <Compile Include="Assets\Interaction\PhysicMaterial.cs" />
     <Compile Include="Assets\Interaction\PhysicMaterials\DirtPhysicMaterial.cs" />
@@ -69,6 +74,7 @@
     <Compile Include="Assets\LightObj.cs" />
     <Compile Include="Assets\Main.cs" />
     <Compile Include="Assets\Netplay.cs" />
+    <Compile Include="Assets\Objects\CameraControllers\CameraController.cs" />
     <Compile Include="Assets\SoundInstance.cs" />
     <Compile Include="Assets\World\AtmosphereSystem.cs" />
     <Compile Include="Assets\World\Chunk.cs" />
@@ -81,23 +87,23 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Assets\Entities\Static\Nature\Minerals\Boulder.material" />
-    <None Include="Assets\Entities\Static\Nature\Minerals\Boulder.obj" />
-    <None Include="Assets\Entities\Static\Nature\Plants\BerryBush.material" />
-    <None Include="Assets\Entities\Static\Nature\Plants\BerryBush.obj" />
-    <None Include="Assets\Entities\Static\Nature\Plants\BerryBushLOD2.obj" />
-    <None Include="Assets\Entities\Static\Nature\Trees\Spruce\SpruceBark.material" />
-    <None Include="Assets\Entities\Static\Nature\Trees\Spruce\SpruceBark.obj" />
-    <None Include="Assets\Entities\Static\Nature\Trees\Spruce\SpruceBranch.material" />
-    <None Include="Assets\Entities\Static\Nature\Trees\Spruce\SpruceBranch2.ase" />
-    <None Include="Assets\Entities\Static\Nature\Trees\Spruce\SpruceBranches.obj" />
-    <None Include="Assets\Entities\Static\Structures\Campfire\Campfire.material" />
-    <None Include="Assets\Entities\Static\Structures\Campfire\Campfire.obj" />
-    <None Include="Assets\Entities\Testing\Robot\Robot.fbx" />
-    <None Include="Assets\Entities\Testing\Robot\Robot.material" />
-    <None Include="Assets\Entities\Testing\Robot\Robot.mesh" />
-    <None Include="Assets\Entities\Testing\Robot\Robot.obj" />
-    <None Include="Assets\Entities\Testing\Rocket\Rocket.material" />
+    <None Include="Assets\Objects\Entities\Static\Nature\Minerals\Boulder.material" />
+    <None Include="Assets\Objects\Entities\Static\Nature\Minerals\Boulder.obj" />
+    <None Include="Assets\Objects\Entities\Static\Nature\Plants\BerryBush.material" />
+    <None Include="Assets\Objects\Entities\Static\Nature\Plants\BerryBush.obj" />
+    <None Include="Assets\Objects\Entities\Static\Nature\Plants\BerryBushLOD2.obj" />
+    <None Include="Assets\Objects\Entities\Static\Nature\Trees\Spruce\SpruceBark.material" />
+    <None Include="Assets\Objects\Entities\Static\Nature\Trees\Spruce\SpruceBark.obj" />
+    <None Include="Assets\Objects\Entities\Static\Nature\Trees\Spruce\SpruceBranch.material" />
+    <None Include="Assets\Objects\Entities\Static\Nature\Trees\Spruce\SpruceBranch2.ase" />
+    <None Include="Assets\Objects\Entities\Static\Nature\Trees\Spruce\SpruceBranches.obj" />
+    <None Include="Assets\Objects\Entities\Static\Structures\Campfire\Campfire.material" />
+    <None Include="Assets\Objects\Entities\Static\Structures\Campfire\Campfire.obj" />
+    <None Include="Assets\Objects\Entities\Testing\Robot\Robot.fbx" />
+    <None Include="Assets\Objects\Entities\Testing\Robot\Robot.material" />
+    <None Include="Assets\Objects\Entities\Testing\Robot\Robot.mesh" />
+    <None Include="Assets\Objects\Entities\Testing\Robot\Robot.obj" />
+    <None Include="Assets\Objects\Entities\Testing\Rocket\Rocket.material" />
     <None Include="Assets\Materials\DualSided.material" />
     <None Include="Assets\Materials\Skybox.material" />
     <None Include="Assets\Shaders\dualsided.program" />
