--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -76,6 +76,7 @@
     <Compile Include="GameObject.cs" />
     <Compile Include="Graphics\Animation\AnimationBone.cs" />
     <Compile Include="Graphics\Animation\AnimationSkeleton.cs" />
+    <Compile Include="Graphics\Assets\ShaderUniforms.cs" />
     <Compile Include="Graphics\Rendering\Enums\AttributeId.cs" />
     <Compile Include="Graphics\Components\Camera.cs" />
     <Compile Include="Graphics\Components\Light.cs" />
