--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,7 @@ Projects/SmartMeshLibrary/bin
 Projects/SmartMeshLibrary/obj
 Projects/AbyssCrusaders/Assets/bin
 Projects/AbyssCrusaders/Assets/obj
+Projects/AbyssCrusaders/Build
 Projects/SurvivalGame/Assets/bin
 Projects/SurvivalGame/Assets/obj
+Projects/SurvivalGame/Build
