Refactoring, various improvements, new water in SurvivalGame example.

--- a/Projects/GameEngine/GameEngine.csproj
+++ b/Projects/GameEngine/GameEngine.csproj
@@ -76,7 +76,9 @@
     <Compile Include="DebugInternal.cs" />
     <Compile Include="Graphics\Enums\BlendingFactor.cs" />
     <Compile Include="Graphics\Enums\PolygonMode.cs" />
-    <Compile Include="Graphics\Assets\Shader.UniformSetters.cs" />
+    <Compile Include="Graphics\Objects\VertexAttributes\NormalAttribute.cs" />
+    <Compile Include="Graphics\Objects\VertexAttributes\VertexAttribute.cs" />
+    <Compile Include="Graphics\Objects\Shader.UniformSetters.cs" />
     <Compile Include="Graphics\Enums\ShaderCombination.cs" />
     <Compile Include="Graphics\Enums\ShaderType.cs" />
     <Compile Include="Graphics\Enums\ShaderUniform.cs" />
@@ -89,13 +91,13 @@
     <Compile Include="Graphics\Animation\AnimationBone.cs" />
     <Compile Include="Graphics\Animation\AnimationSkeleton.cs" />
     <Compile Include="Graphics\Enums\FilterMode.cs" />
-    <Compile Include="Graphics\Assets\Material.cs" />
-    <Compile Include="Graphics\Assets\Pixel.cs" />
-    <Compile Include="Graphics\Assets\PrimitiveMeshes.cs" />
-    <Compile Include="Graphics\Assets\RenderTexture.cs" />
-    <Compile Include="Graphics\Assets\Shader.cs" />
-    <Compile Include="Graphics\Assets\ShaderUniforms.cs" />
-    <Compile Include="Graphics\Assets\Texture.cs" />
+    <Compile Include="Graphics\Objects\Material.cs" />
+    <Compile Include="Graphics\Objects\Pixel.cs" />
+    <Compile Include="Graphics\Objects\PrimitiveMeshes.cs" />
+    <Compile Include="Graphics\Objects\RenderTexture.cs" />
+    <Compile Include="Graphics\Objects\Shader.cs" />
+    <Compile Include="Graphics\Objects\ShaderUniforms.cs" />
+    <Compile Include="Graphics\Objects\Texture.cs" />
     <Compile Include="Graphics\Enums\RenderbufferStorage.cs" />
     <Compile Include="Graphics\Enums\TextureWrapMode.cs" />
     <Compile Include="Graphics\Components\Camera.cs" />
@@ -152,7 +154,7 @@
     <Compile Include="Input\Keys.cs" />
     <Compile Include="Input\MouseButton.cs" />
     <Compile Include="Mathf.cs" />
-    <Compile Include="Mesh.cs" />
+    <Compile Include="Graphics\Objects\Meshes\Mesh.cs" />
     <Compile Include="PerlinNoiseDouble.cs" />
     <Compile Include="PerlinNoiseFloat.cs" />
     <Compile Include="Physics\Collision.cs" />
