Refactoring; Split Extensions.cs into multiple files; Moved extensions to GameEngine.Extensions namespace.

--- a/Projects/GameEngine/GameEngine.csproj
+++ b/Projects/GameEngine/GameEngine.csproj
@@ -70,21 +70,29 @@
     <Compile Include="Audio\AudioClip.cs" />
     <Compile Include="Audio\Components\AudioListener.cs" />
     <Compile Include="Audio\Components\AudioSource.cs" />
+    <Compile Include="Components\Attributes\AllowOnlyOneInWorld.cs" />
+    <Compile Include="Components\Attributes\AllowOnlyOnePerObject.cs" />
+    <Compile Include="Components\Attributes\ComponentAttribute.cs" />
+    <Compile Include="Extensions\Chains\ComponentExtensions.cs" />
     <Compile Include="Components\Component.cs" />
-    <Compile Include="Components\ComponentAttributes.cs" />
+    <Compile Include="Components\Attributes\ComponentParameters.cs" />
     <Compile Include="Debug.cs" />
     <Compile Include="DebugInternal.cs" />
+    <Compile Include="Extensions\LinqExtensions.cs" />
+    <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="Extensions\Chains\RendererExtensions.cs" />
+    <Compile Include="Extensions\Chains\MeshRendererExtensions.cs" />
     <Compile Include="Graphics\Enums\BlendingFactor.cs" />
     <Compile Include="Graphics\Enums\PolygonMode.cs" />
     <Compile Include="Graphics\Objects\VertexAttributes\NormalAttribute.cs" />
     <Compile Include="Graphics\Objects\VertexAttributes\VertexAttribute.cs" />
-    <Compile Include="Graphics\Objects\Shader.UniformSetters.cs" />
+    <Compile Include="Graphics\Objects\Shader\Shader.UniformSetters.cs" />
     <Compile Include="Graphics\Enums\ShaderCombination.cs" />
     <Compile Include="Graphics\Enums\ShaderType.cs" />
     <Compile Include="Graphics\Enums\ShaderUniform.cs" />
     <Compile Include="Graphics\Components\Light2D.cs" />
     <Compile Include="Graphics\Enums\FramebufferAttachment.cs" />
-    <Compile Include="Extensions\Extensions.cs" />
+    <Compile Include="Extensions\PixelExtensions.cs" />
     <Compile Include="Extensions\IOExtensions.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="GameObject.cs" />
@@ -93,10 +101,10 @@
     <Compile Include="Graphics\Enums\FilterMode.cs" />
     <Compile Include="Graphics\Objects\Material.cs" />
     <Compile Include="Graphics\Objects\Pixel.cs" />
-    <Compile Include="Graphics\Objects\PrimitiveMeshes.cs" />
+    <Compile Include="Graphics\Objects\Mesh\PrimitiveMeshes.cs" />
     <Compile Include="Graphics\Objects\RenderTexture.cs" />
-    <Compile Include="Graphics\Objects\Shader.cs" />
-    <Compile Include="Graphics\Objects\ShaderUniforms.cs" />
+    <Compile Include="Graphics\Objects\Shader\Shader.cs" />
+    <Compile Include="Graphics\Objects\Shader\ShaderUniforms.cs" />
     <Compile Include="Graphics\Objects\Texture.cs" />
     <Compile Include="Graphics\Enums\RenderbufferStorage.cs" />
     <Compile Include="Graphics\Enums\TextureWrapMode.cs" />
@@ -154,19 +162,27 @@
     <Compile Include="Input\Keys.cs" />
     <Compile Include="Input\MouseButton.cs" />
     <Compile Include="Mathf.cs" />
-    <Compile Include="Graphics\Objects\Meshes\Mesh.cs" />
+    <Compile Include="Graphics\Objects\Mesh\Mesh.cs" />
     <Compile Include="PerlinNoiseDouble.cs" />
     <Compile Include="PerlinNoiseFloat.cs" />
     <Compile Include="Physics\Collision.cs" />
     <Compile Include="Physics\Collision2D.cs" />
     <Compile Include="Physics\Components\CharacterController.cs" />
-    <Compile Include="Physics\Components\Collider.cs" />
-    <Compile Include="Physics\Components\Colliders2D\Box2DCollider.cs" />
-    <Compile Include="Physics\Components\Colliders3D\BoxCollider.cs" />
-    <Compile Include="Physics\Components\Colliders3D\CapsuleCollider.cs" />
-    <Compile Include="Physics\Components\Colliders3D\CylinderCollider.cs" />
-    <Compile Include="Physics\Components\Colliders3D\MeshCollider.cs" />
-    <Compile Include="Physics\Components\Colliders3D\SphereCollider.cs" />
+    <Compile Include="Physics\Components\Colliders\Collider.cs" />
+    <Compile Include="Physics\Components\Colliders\Colliders2D\Box2DCollider.cs" />
+    <Compile Include="Extensions\Chains\Box2DColliderExtensions.cs" />
+    <Compile Include="Physics\Components\Colliders\Colliders3D\BoxCollider.cs" />
+    <Compile Include="Physics\Components\Colliders\Colliders3D\CapsuleCollider.cs" />
+    <Compile Include="Extensions\Chains\BoxColliderExtensions.cs" />
+    <Compile Include="Extensions\Chains\CapsuleColliderExtensions.cs" />
+    <Compile Include="Extensions\Chains\SphereColliderExtensions.cs" />
+    <Compile Include="Extensions\Chains\CylinderColliderExtensions.cs" />
+    <Compile Include="Extensions\Chains\MeshColliderExtensions.cs" />
+    <Compile Include="Physics\Components\Colliders\Colliders3D\CylinderCollider.cs" />
+    <Compile Include="Physics\Components\Colliders\Colliders3D\MeshCollider.cs" />
+    <Compile Include="Physics\Components\Colliders\Colliders3D\SphereCollider.cs" />
+    <Compile Include="Extensions\Chains\ColliderExtensions.cs" />
+    <Compile Include="Extensions\Chains\RigidbodyBaseExtensions.cs" />
     <Compile Include="Physics\Components\PhysicsComponent.cs" />
     <Compile Include="Physics\Components\Rigidbody.cs" />
     <Compile Include="Physics\Components\Rigidbody2D.cs" />
